--- a/mernbackend/package.json
+++ b/mernbackend/package.json
@@ -3,6 +3,7 @@
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "mongoose": "^7.0.1",
+    "nodemailer": "^6.9.1",
     "validator": "^13.9.0"
   }
 }
